welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: value lenght is not a member of Array[Int]
  return A/(nums.lenght)
                 ^